--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
 </head>
 <body>
     <section id="landing">
-        <nav>
-            <div class="nav__container">
+      <nav>
+        <div class="nav__container">
           <img class="logo" src="./assets/Library.svg" alt="">
           <ul class="nav__links">
             <li><a href="#" class="nav__link">Home</a></li>
             <li><a href="#" class="nav__link">Contact</a></li>
             <li><a href="#" class="nav__link nav__link--primary">Books</a></li>
-          </ul>
-        </div>
+          </ul>     
         <button class="btn__menu" onclick="openMenu()">
             <i class="fas fa-bars"></i>
         </button>
@@ -28,12 +27,13 @@
             </button>
             <ul class="menu__links">
                 <li class="menu__list">
-                    <a href="#" class="menu__link">Home</a></li>
+                    <a href="#" class="menu__link" onclick="closeMenu()">Home</a></li>
                 <li class="menu__list">
-                    <a href="#features" class="menu__link">Books</a></li>
+                    <a href="#features" class="menu__link" onclick="closeMenu()">Books</a></li>
                 <li class="menu__list">
-                    <a class="menu__link no-cursor">Contact</a></li>
+                    <a class="menu__link no-cursor" onclick="closeMenu()">Contacts</a></li>
             </ul>
+          </div>
         </div>
         </nav>
         <header>
@@ -41,7 +41,9 @@
                 <div class="header__description">
                     <h1>United State's most awarded online library platform</h1>
                     <h2>Find your dream book with <span class="red">Library</span></h2>
-                    <button class="btn">Browse books</button>
+                    <a href="#features">
+                        <button class="btn">Browse books</button>
+                    </a>
                 </div>
                 <figure class="header__img--wrapper">
                     <img src="./assets/undraw_reading-time_gcvc.svg" alt="">
